--- a/pom.xml
+++ b/pom.xml
@@ -88,5 +88,9 @@
         </plugins>
     </build>
 
-
+    <properties>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
